# librime-proto

./: .gitmodules  CMakeLists.txt  README.md  action-install.bat  action-install.sh  deps.bat  deps.mk  rime_ipc.capnp  rime_proto_console.cc
src/: proto_module.cc  rime_proto_api.h
